gobmkida/c2/next_rand
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/next_rand/src/utils/random.c:570:41: error: use of undeclared identifier 'xmmword_545000'
v2 = _mm_load_si128( ( const __m128i *)&xmmword_545000); 
                                        ^
1 error generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/next_rand/src/obj/5/random.o] Error 1
